# BlogDojo

./: .gitignore  app.py  pyproject.toml  readme.md  render.yaml  requirements.txt  test.py
migrations/versions/: 7b3ba11b8751_increase_profile_pic_length.py
models/: post.py  user.py
static/css/: home.css  login.css  newPost.css  post.css  profile.css  style.css
static/js/: index.js  theme.js
templates/: base.html  edit.html  index.html  login.html  newPost.html  post.html  profile.html  signup.html
templates/macros/: blogCard.html  modeButton.html
utils/: idGenerator.py  pfp.py
