[project]
name = "blogdojo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach==6.2.0",
    "blinker==1.9.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "flask==3.1.1",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.2.3",
    "gunicorn==23.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "lz4==4.4.4",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "packaging==25.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv==1.1.1",
    "sqlalchemy==2.0.41",
    "typing-extensions==4.14.1",
    "webencodings==0.5.1",
    "werkzeug==3.1.3",
]
